--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mask",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,5 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql2": "^3.9.1"
-  },
-  "description": ""
+  }
 }
