--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js",
@@ -15,6 +16,7 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mysql2": "^3.9.1"
   }
